--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "vscode-azureappservice",
     "displayName": "Azure App Service",
     "description": "An Azure App Service management extension for Visual Studio Code.",
-    "version": "0.16.1-alpha",
+    "version": "0.17.0",
     "publisher": "ms-azuretools",
     "icon": "resources/windows-azure-web-site.png",
     "aiKey": "AIF-d9b70cd4-b9f9-4d70-929b-a071c400b217",
@@ -42,7 +42,6 @@
         "onCommand:appService.Deploy",
         "onCommand:appService.ConfigureDeploymentSource",
         "onCommand:appService.configureAzureWebAppPipeline",
-        "onCommand:appService.browseAzureWebAppPipeline",
         "onCommand:appService.DeploymentScript",
         "onCommand:appService.SwapSlots",
         "onCommand:appService.appSettings.Add",
@@ -160,12 +159,7 @@
             },
             {
                 "command": "appService.configureAzureWebAppPipeline",
-                "title": "Configure Pipeline",
-                "category": "Azure App Service"
-            },
-            {
-                "command": "appService.browseAzureWebAppPipeline",
-                "title": "Browse Pipeline",
+                "title": "Configure Pipeline on WebApp",
                 "category": "Azure App Service"
             },
             {
@@ -363,10 +357,6 @@
                 {
                     "command": "appService.configureAzureWebAppPipeline",
                     "when": "never"
-                },
-                {
-                    "command": "appService.browseAzureWebAppPipeline",
-                    "when": "never"
                 }
             ],
             "view/title": [
@@ -451,11 +441,6 @@
                     "command": "appService.configureAzureWebAppPipeline",
                     "when": "view == azureAppService && viewItem == appService",
                     "group": "3_appServiceDeployCommands@2"
-                },
-                {
-                    "command": "appService.browseAzureWebAppPipeline",
-                    "when": "view == azureAppService && viewItem == appService",
-                    "group": "3_appServiceDeployCommands@3"
                 },
                 {
                     "command": "appService.ConfigureDeploymentSource",
